<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_BarcodeInspection" Id="{30941f97-6106-4e76-9db7-8cb51e5c6809}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_BarcodeInspection
VAR_INPUT
	bEnable				: BOOL;
	bTrigger			: BOOL;
	bBypassFGHS			: BOOL;
	bBarcodeGood		: ARRAY [1..4] OF BOOL;
	bBarcodeBad			: ARRAY [1..4] OF BOOL;
	bDoneRead			: ARRAY [1..4] OF BOOL;
	BarcodeData1		: STRING;
	BarcodeData2		: STRING;
	BarcodeData3		: STRING;
	BarcodeData4		: STRING;
	bPalletReady		: ARRAY [1..4] OF BOOL;
	bResetCounter		: BOOL;
END_VAR
VAR_OUTPUT
	bBarcodeChecked		: BOOL;
	BarcodeResult		: STRING;
	iPlacingLine		: INT;
	bReject				: BOOL;
	bProductFound		: ARRAY [1..4] OF BOOL;
	RejectID			: INT;
	RejectMsg			: STRING;
END_VAR
VAR_OUTPUT PERSISTENT
	CountReject			: UINT;
END_VAR
VAR_IN_OUT
	ar_ProductInfo		: ARRAY [1..4] OF stProductInfo;
	PlannedEAN			: ARRAY [1..4] OF STRING;
	PlannedCodeVariant	: ARRAY [1..4] OF STRING;
END_VAR
VAR
	Sequence			: INT;
	DoneCheck			: BOOL;
	BarcodeEAN			: STRING;
	CodeVariant			: STRING;
	BarcodeLinkUp		: STRING;
	TimeOut				: TON;
	NotFound			: BOOL;
	i					: INT;
	Index				: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bResetCounter THEN
	CountReject := 0;
END_IF

IF bEnable THEN
	
	(*----Check Barcode -----*)
	CASE Sequence OF
		0:	
			IF bTrigger THEN
				DoneCheck		:= FALSE;
				bBarcodeChecked	:= FALSE;
				bReject			:= FALSE;
				iPlacingLine	:= 0;
				RejectID		:= 0;
				RejectMsg		:= '';
				BarcodeResult	:= '';
				BarcodeEAN		:= '';
				CodeVariant		:= '';
				BarcodeLinkUp	:= '';
				Sequence		:= 10;
			END_IF
			
		10:
			TimeOut(IN:=TRUE, PT:=T#5S);
			IF bBarcodeGood[1] AND bDoneRead[1] THEN
				BarcodeResult 	:= BarcodeData1;
				Sequence		:= 11;
			ELSIF bBarcodeGood[2] AND bDoneRead[2] THEN
				BarcodeResult 	:= BarcodeData2;
				Sequence		:= 11;
			ELSIF bBarcodeGood[3] AND bDoneRead[3] THEN
				BarcodeResult 	:= BarcodeData3;
				Sequence		:= 11;
			ELSIF bBarcodeGood[4] AND bDoneRead[4] THEN
				BarcodeResult 	:= BarcodeData4;
				Sequence		:= 11;
			ELSIF (bBarcodeBad[1] AND bBarcodeBad[2] AND bBarcodeBad[3] AND bBarcodeBad[4]) OR TimeOut.Q  THEN //
				TimeOut(IN:=FALSE); 
				RejectID		:= 1;
				RejectMsg		:= 'Reject Bad Read Barcode';
				Sequence		:= 999; 
			END_IF
			
		11:	(* Split Barcode *)
			BarcodeEAN		:= DELETE(DELETE(BarcodeResult,3,0),24,15);
			CodeVariant		:= DELETE(DELETE(BarcodeResult,19,0),20,3);
			BarcodeLinkUp	:= DELETE(DELETE(BarcodeResult,33,0),6,3);
			Sequence		:= 12;
			
		12: (* Check EAN *)
			FOR i := 1 TO 4 BY 1 DO
				IF PlannedEAN[i] <> '' AND BarcodeEAN = PlannedEAN[i] AND PlannedEAN[i] <> ar_ProductInfo[i].EANVariant THEN
					ar_ProductInfo[i].EANVariant	:= PlannedEAN[i];
					bProductFound[i]				:= TRUE;
					Sequence						:= 20;
					EXIT;
				END_IF
			END_FOR
			
			IF i > 4 THEN
				i 				:= 0;
				Sequence		:= 20;
			END_IF
			
		20:	
			FOR i := 1 TO 4 BY 1 DO
				IF BarcodeLinkUp = ar_ProductInfo[i].LinkUpSource  AND BarcodeEAN = ar_ProductInfo[i].EANVariant THEN //AND CodeVariant = ar_ProductInfo[i].CodeVariant
					iPlacingLine	 		:= i;
					Sequence				:= 21;
				EXIT;
				END_IF;
			END_FOR;	
			IF i > 4 THEN
				bBarcodeChecked	:= FALSE;
				NotFound		:= TRUE;
				RejectID		:= 2;
				RejectMsg		:= 'Barcode Result Not Matched Any References';
				Sequence		:= 999;
			END_IF;
			
		21:
			IF CodeVariant <> ar_ProductInfo[iPlacingLine].CodeVariant THEN
				ar_ProductInfo[iPlacingLine].CodeVariant	:= CodeVariant;
				bProductFound[iPlacingLine]					:= TRUE;
				Sequence									:= 30;
			ELSE
				Sequence									:= 30;
			END_IF
			
		30:
			IF bPalletReady[iPlacingLine] THEN
				TimeOut(IN:=FALSE);
				bBarcodeChecked	:=	TRUE;
				Sequence		:=	1000;	
			ELSE
				TimeOut(IN:=TRUE, PT:=T#30S);
				IF TimeOut.Q THEN
				TimeOut(IN:=FALSE);
				RejectID		:= 3;
				RejectMsg		:= 'Reject Placing Not Ready';
				Sequence		:= 999;
				END_IF
			END_IF
			
		999:
			TimeOut(IN:=FALSE);
			iPlacingLine	:= 0;
			bBarcodeChecked	:=	TRUE;
			bReject 		:=	TRUE;
			CountReject		:= 	CountReject + 1;
			Sequence		:=	1000;	
	
		1000:
			DoneCheck	:= TRUE;
			IF NOT bTrigger THEN
				bProductFound[1]	:= FALSE;	
				bProductFound[2]	:= FALSE;
				bProductFound[3]	:= FALSE;
				bProductFound[4]	:= FALSE;
				NotFound			:= FALSE;
				bBarcodeChecked		:= FALSE;
				bReject				:= FALSE;
				Sequence			:= 0;
			END_IF
			
	END_CASE
	
	
ELSE
	TimeOut(IN:=FALSE);
	NotFound			:= FALSE;
	bBarcodeChecked		:= FALSE;
	bReject				:= FALSE;
	Sequence			:= 0;
	iPlacingLine		:= 0;
	i					:= 0;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FB_BarcodeInspection">
      <LineId Id="1126" Count="0" />
      <LineId Id="1128" Count="1" />
      <LineId Id="1127" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="132" Count="0" />
      <LineId Id="127" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="1262" Count="0" />
      <LineId Id="1761" Count="1" />
      <LineId Id="1255" Count="0" />
      <LineId Id="1673" Count="2" />
      <LineId Id="1718" Count="1" />
      <LineId Id="1717" Count="0" />
      <LineId Id="38" Count="3" />
      <LineId Id="1630" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="1400" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="1402" Count="1" />
      <LineId Id="1401" Count="0" />
      <LineId Id="1405" Count="1" />
      <LineId Id="1404" Count="0" />
      <LineId Id="1408" Count="1" />
      <LineId Id="1407" Count="0" />
      <LineId Id="1410" Count="0" />
      <LineId Id="1632" Count="0" />
      <LineId Id="1430" Count="1" />
      <LineId Id="1411" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="1412" Count="2" />
      <LineId Id="1421" Count="0" />
      <LineId Id="1423" Count="0" />
      <LineId Id="1452" Count="0" />
      <LineId Id="556" Count="1" />
      <LineId Id="941" Count="2" />
      <LineId Id="951" Count="0" />
      <LineId Id="944" Count="0" />
      <LineId Id="1454" Count="0" />
      <LineId Id="945" Count="5" />
      <LineId Id="561" Count="0" />
      <LineId Id="952" Count="0" />
      <LineId Id="838" Count="2" />
      <LineId Id="842" Count="7" />
      <LineId Id="1432" Count="1" />
      <LineId Id="850" Count="0" />
      <LineId Id="837" Count="0" />
      <LineId Id="1580" Count="1" />
      <LineId Id="1583" Count="3" />
      <LineId Id="1588" Count="1" />
      <LineId Id="1582" Count="0" />
      <LineId Id="1435" Count="1" />
      <LineId Id="1438" Count="0" />
      <LineId Id="1449" Count="0" />
      <LineId Id="1439" Count="2" />
      <LineId Id="1445" Count="1" />
      <LineId Id="1448" Count="0" />
      <LineId Id="1442" Count="2" />
      <LineId Id="1447" Count="0" />
      <LineId Id="1437" Count="0" />
      <LineId Id="1424" Count="0" />
      <LineId Id="1429" Count="0" />
      <LineId Id="1631" Count="0" />
      <LineId Id="1578" Count="0" />
      <LineId Id="1426" Count="2" />
      <LineId Id="1425" Count="0" />
      <LineId Id="82" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="1261" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="621" Count="1" />
      <LineId Id="1537" Count="1" />
      <LineId Id="669" Count="0" />
      <LineId Id="1450" Count="1" />
      <LineId Id="1455" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="198" Count="0" />
      <LineId Id="87" Count="0" />
      <LineId Id="203" Count="0" />
      <LineId Id="1495" Count="0" />
      <LineId Id="1336" Count="0" />
      <LineId Id="1496" Count="1" />
      <LineId Id="204" Count="0" />
      <LineId Id="207" Count="0" />
      <LineId Id="213" Count="0" />
      <LineId Id="205" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>